--- a/.logic/package.json
+++ b/.logic/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@lamp-project/html-utils": "^1.1.0",
-    "@lamp-project/npl-utils": "^1.0.0",
+    "@lamp-project/nlp-utils": "^1.2.0",
     "axios": "^0.27.2",
     "glob": "^8.0.3",
     "jsdom": "^20.0.0",
